Cocoa: Correct mime handler prioritization.

According to the documentation recently added mime
type converters should take precedence over previously 
added converters. Make it so.

Task-number: QTBUG-25951

Change-Id: Ic23ca7cbb93a98711d762b1ef0e0dd2aa1ceaeda
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>